viewer2/src/app.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;600&family=Rouge+Script&display=swap');
* {
  margin: 0;
  padding: 0;
}
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color: #213547;
  background-color: #ffffff;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

a:hover {
  color: #747bff;
}

